# 07-Cuda-Histogram

./: CMakeLists.txt  histograma.txt  kernel.cu  main.cpp  main_mpi.cpp
